unpackaged/main/default/objects/Task_Time_Split_Settings__c/Task_Time_Split_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Task Time Split Settings</label>
</CustomObject>