unpackaged/main/default/objects/Task_Time_Split_Settings__c/fields/Enable_Task_Time_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_Task_Time_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Task Time Trigger</label>
    <type>Checkbox</type>
</CustomField>