unpackaged/main/default/objects/Task_Time_Split_Settings__c/fields/Enable_Timecard_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_Timecard_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Timecard Trigger</label>
    <type>Checkbox</type>
</CustomField>