unpackaged/main/default/objects/Task_Time_Split_Settings__c/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <description>Used for Report Link On Project Record.</description>
    <label>Report Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>